Bug 269848 - REGRESSION (273742@main): LinkedIn "…" menu does not populate on click
Summary: REGRESSION (273742@main): LinkedIn "…" menu does not populate on click
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Animations (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Tim Nguyen (:ntim)
URL:
Keywords: InRadar
: 270344 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-02-21 08:29 PST by Tim Nguyen (:ntim)
Modified: 2024-03-04 03:23 PST (History)
4 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tim Nguyen (:ntim) 2024-02-21 08:29:41 PST
rdar://123264559
Comment 1 Tim Nguyen (:ntim) 2024-02-21 08:33:57 PST
Pull request: https://github.com/WebKit/WebKit/pull/24881
Comment 2 EWS 2024-02-21 11:50:24 PST
Committed 275120@main (71b8fba1401e): <https://commits.webkit.org/275120@main>

Reviewed commits have been landed. Closing PR #24881 and removing active labels.
Comment 3 Sam Sneddon [:gsnedders] 2024-02-21 11:59:36 PST
Per ntim on Slack:

> Antoine's change regresses [wpt/css/CSS2/visufx/animation/visibility-interpolation.html]

(which we don't have imported, see bug 209735)
Comment 4 Antoine Quint 2024-03-04 03:23:58 PST
*** Bug 270344 has been marked as a duplicate of this bug. ***