Cherry-pick 71b8fba1401e. rdar://123264559

REGRESSION(273742@main): LinkedIn "…" menu does not populate on click
    https://bugs.webkit.org/show_bug.cgi?id=269848
    rdar://123264559

    Reviewed by Cameron McCormack.

    The menu on LinkedIn transitions the `visibility` CSS property.

    Do a partial revert of 273742@main to revert only the animation wrapper change for the `visibility` property, since it has caused changes that are timing sensitive for the site.

    Imported WPT that also regressed along with 273742@main to avoid regressing this again.

    * LayoutTests/imported/w3c/resources/import-expectations.json:
    * LayoutTests/imported/w3c/web-platform-tests/css/CSS2/visufx/animation/visibility-interpolation-expected.txt: Added.
    * LayoutTests/imported/w3c/web-platform-tests/css/CSS2/visufx/animation/visibility-interpolation.html: Added.
    * Source/WebCore/animation/CSSPropertyAnimation.cpp:
    (WebCore::CSSPropertyAnimationWrapperMap::CSSPropertyAnimationWrapperMap):

    Canonical link: https://commits.webkit.org/275120@main

Identifier: 273664.1309@safari-7619.1.5-branch